DeployNESSUS_TP/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.14.6.61914",
      "templateHash": "14931622694145254656"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "francecentral"
    },
    "owner": {
      "type": "string"
    },
    "approver": {
      "type": "string"
    },
    "endDate": {
      "type": "string"
    },
    "count": {
      "type": "int",
      "metadata": {
        "description": "Nombre d'instances à déployer"
      }
    }
  },
  "resources": [
    {
      "copy": {
        "name": "deploy_tp_ad",
        "count": "[length(range(0, parameters('count')))]"
      },
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2020-10-01",
      "name": "[format('{0}tpNESSUS', range(0, parameters('count'))[copyIndex()])]",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "owner": {
            "value": "[parameters('owner')]"
          },
          "approver": {
            "value": "[parameters('approver')]"
          },
          "endDate": {
            "value": "[parameters('endDate')]"
          },
          "VM_WINDOWS_name": {
            "value": "[format('{0}_VM-NESSUS-TP-WINDOWS', range(0, parameters('count'))[copyIndex()])]"
          },
          "VM_SERVER_name": {
            "value": "[format('{0}_VM-NESSUS-TP-SERVER', range(0, parameters('count'))[copyIndex()])]"
          },
          "VM_LINUX_name": {
            "value": "[format('{0}_VM-NESSUS-TP-LINUX', range(0, parameters('count'))[copyIndex()])]"
          },
          "NSG_Name": {
            "value": "[format('{0}_NSG-NESSUS-TP', range(0, parameters('count'))[copyIndex()])]"
          },
          "VNET_name": {
            "value": "[format('{0}_VNET-NESSUS-TP', range(0, parameters('count'))[copyIndex()])]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.14.6.61914",
              "templateHash": "17342077384712983114"
            }
          },
          "parameters": {
            "location": {
              "type": "string",
              "defaultValue": "francecentral"
            },
            "owner": {
              "type": "string"
            },
            "approver": {
              "type": "string"
            },
            "endDate": {
              "type": "string"
            },
            "VM_WINDOWS_name": {
              "type": "string",
              "metadata": {
                "description": "Choisir nom du compte admin et son password"
              }
            },
            "VM_LINUX_name": {
              "type": "string"
            },
            "VM_SERVER_name": {
              "type": "string"
            },
            "VNET_name": {
              "type": "string"
            },
            "NSG_Name": {
              "type": "string"
            }
          },
          "variables": {
            "ImageID_VM_SERVER": "/subscriptions/a4038696-ce0f-492d-9049-38720738d4fe/resourceGroups/RG_Compute_Gallery/providers/Microsoft.Compute/galleries/Compute_gallery_TP/images/TP_NESSUS_SERVER_VM/versions/1.0.0",
            "ImageID_VM_WINDOWS": "/subscriptions/a4038696-ce0f-492d-9049-38720738d4fe/resourceGroups/RG_Compute_Gallery/providers/Microsoft.Compute/galleries/Compute_gallery_TP/images/TP_NESSUS_WINDOWS_VM/versions/1.0.0",
            "ImageID_VM_LINUX": "/subscriptions/a4038696-ce0f-492d-9049-38720738d4fe/resourceGroups/RG_Compute_Gallery/providers/Microsoft.Compute/galleries/Compute_gallery_TP/images/TP_NESSUS_LINUX_VM/versions/1.0.0"
          },
          "resources": [
            {
              "type": "Microsoft.Network/publicIPAddresses",
              "apiVersion": "2022-07-01",
              "name": "[format('{0}-public-IP', parameters('VM_SERVER_name'))]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "sku": {
                "name": "Basic",
                "tier": "Regional"
              },
              "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
              }
            },
            {
              "type": "Microsoft.Network/virtualNetworks",
              "apiVersion": "2022-07-01",
              "name": "[format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name))]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "addressSpace": {
                  "addressPrefixes": [
                    "10.4.0.0/16"
                  ]
                },
                "subnets": [
                  {
                    "name": "default",
                    "properties": {
                      "addressPrefix": "10.4.0.0/24",
                      "delegations": [],
                      "privateEndpointNetworkPolicies": "Enabled",
                      "privateLinkServiceNetworkPolicies": "Enabled"
                    }
                  }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
              }
            },
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2022-07-01",
              "name": "[parameters('NSG_Name')]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "securityRules": [
                  {
                    "name": "SSH_Inbound",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "22",
                      "access": "Allow",
                      "priority": 100,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "SSH_Outbound",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "22",
                      "access": "Allow",
                      "priority": 110,
                      "direction": "Outbound"
                    }
                  },
                  {
                    "name": "Allow_Nessus_Web",
                    "properties": {
                      "priority": 310,
                      "protocol": "*",
                      "access": "Allow",
                      "direction": "Inbound",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "8834"
                    }
                  },
                  {
                    "name": "Allow_4000",
                    "properties": {
                      "priority": 320,
                      "protocol": "*",
                      "access": "Allow",
                      "direction": "Inbound",
                      "sourcePortRange": "*",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "4000"
                    }
                  },
                  {
                    "name": "Allow_8080",
                    "properties": {
                      "priority": 330,
                      "protocol": "*",
                      "access": "Allow",
                      "direction": "Inbound",
                      "sourcePortRange": "*",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "8080"
                    }
                  },
                  {
                    "name": "Allow_9991",
                    "properties": {
                      "priority": 340,
                      "protocol": "*",
                      "access": "Allow",
                      "direction": "Inbound",
                      "sourcePortRange": "*",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "9991"
                    }
                  },
                  {
                    "name": "Allow_RDP",
                    "properties": {
                      "priority": 360,
                      "protocol": "TCP",
                      "access": "Allow",
                      "direction": "Inbound",
                      "sourcePortRange": "*",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "23389"
                    }
                  },
                  {
                    "name": "Allow_http",
                    "properties": {
                      "priority": 350,
                      "protocol": "*",
                      "access": "Allow",
                      "direction": "Inbound",
                      "sourcePortRange": "*",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "80"
                    }
                  },
                  {
                    "name": "Allow_https",
                    "properties": {
                      "priority": 370,
                      "protocol": "*",
                      "access": "Allow",
                      "direction": "Inbound",
                      "sourcePortRange": "*",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "443"
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Network/networkInterfaces",
              "apiVersion": "2020-11-01",
              "name": "[format('{0}-network-interface', parameters('VM_SERVER_name'))]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "ipConfigurations": [
                  {
                    "name": "ipconfig1",
                    "properties": {
                      "privateIPAllocationMethod": "Static",
                      "privateIPAddress": "10.4.0.3",
                      "publicIPAddress": {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', format('{0}-public-IP', parameters('VM_SERVER_name')))]"
                      },
                      "subnet": {
                        "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name))), '2022-07-01').subnets[0].id]"
                      },
                      "primary": true,
                      "privateIPAddressVersion": "IPv4"
                    }
                  }
                ],
                "dnsSettings": {
                  "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]"
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', format('{0}-public-IP', parameters('VM_SERVER_name')))]",
                "[resourceId('Microsoft.Network/virtualNetworks', format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name)))]"
              ]
            },
            {
              "type": "Microsoft.Network/networkInterfaces",
              "apiVersion": "2022-07-01",
              "name": "[format('{0}-network-interface', parameters('VM_WINDOWS_name'))]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "ipConfigurations": [
                  {
                    "name": "ipconfig1",
                    "properties": {
                      "subnet": {
                        "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name))), '2022-07-01').subnets[0].id]"
                      },
                      "privateIPAllocationMethod": "Static",
                      "privateIPAddress": "10.4.0.5",
                      "primary": true,
                      "privateIPAddressVersion": "IPv4"
                    }
                  }
                ],
                "dnsSettings": {
                  "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]"
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name)))]"
              ]
            },
            {
              "type": "Microsoft.Network/networkInterfaces",
              "apiVersion": "2022-07-01",
              "name": "[format('{0}-network-interface', parameters('VM_LINUX_name'))]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "ipConfigurations": [
                  {
                    "name": "ipconfig1",
                    "properties": {
                      "subnet": {
                        "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name))), '2022-07-01').subnets[0].id]"
                      },
                      "privateIPAllocationMethod": "Static",
                      "privateIPAddress": "10.4.0.4",
                      "primary": true,
                      "privateIPAddressVersion": "IPv4"
                    }
                  }
                ],
                "dnsSettings": {
                  "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]"
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name)))]"
              ]
            },
            {
              "type": "Microsoft.Compute/virtualMachines",
              "apiVersion": "2022-08-01",
              "name": "[parameters('VM_WINDOWS_name')]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "hardwareProfile": {
                  "vmSize": "Standard_B2s"
                },
                "storageProfile": {
                  "osDisk": {
                    "name": "[format('{0}_OSdisk', parameters('VM_WINDOWS_name'))]",
                    "createOption": "FromImage",
                    "managedDisk": {
                      "storageAccountType": "Standard_LRS"
                    },
                    "deleteOption": "Delete"
                  },
                  "imageReference": {
                    "id": "[variables('ImageID_VM_WINDOWS')]"
                  }
                },
                "networkProfile": {
                  "networkInterfaces": [
                    {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-network-interface', parameters('VM_WINDOWS_name')))]",
                      "properties": {
                        "deleteOption": "Delete"
                      }
                    }
                  ]
                },
                "diagnosticsProfile": {
                  "bootDiagnostics": {
                    "enabled": true
                  }
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-network-interface', parameters('VM_WINDOWS_name')))]"
              ]
            },
            {
              "type": "Microsoft.Compute/virtualMachines",
              "apiVersion": "2022-08-01",
              "name": "[parameters('VM_LINUX_name')]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "hardwareProfile": {
                  "vmSize": "Standard_B2s"
                },
                "storageProfile": {
                  "osDisk": {
                    "name": "[format('{0}_OSdisk', parameters('VM_LINUX_name'))]",
                    "createOption": "FromImage",
                    "managedDisk": {
                      "storageAccountType": "Standard_LRS"
                    },
                    "deleteOption": "Delete"
                  },
                  "imageReference": {
                    "id": "[variables('ImageID_VM_LINUX')]"
                  }
                },
                "networkProfile": {
                  "networkInterfaces": [
                    {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-network-interface', parameters('VM_LINUX_name')))]",
                      "properties": {
                        "deleteOption": "Delete"
                      }
                    }
                  ]
                },
                "diagnosticsProfile": {
                  "bootDiagnostics": {
                    "enabled": true
                  }
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-network-interface', parameters('VM_LINUX_name')))]"
              ]
            },
            {
              "type": "Microsoft.Compute/virtualMachines",
              "apiVersion": "2022-08-01",
              "name": "[parameters('VM_SERVER_name')]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "hardwareProfile": {
                  "vmSize": "Standard_B2s"
                },
                "storageProfile": {
                  "osDisk": {
                    "name": "[format('{0}_OSdisk', parameters('VM_SERVER_name'))]",
                    "createOption": "FromImage",
                    "managedDisk": {
                      "storageAccountType": "Standard_LRS"
                    },
                    "deleteOption": "Delete"
                  },
                  "imageReference": {
                    "id": "[variables('ImageID_VM_SERVER')]"
                  }
                },
                "networkProfile": {
                  "networkInterfaces": [
                    {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-network-interface', parameters('VM_SERVER_name')))]",
                      "properties": {
                        "deleteOption": "Delete"
                      }
                    }
                  ]
                },
                "diagnosticsProfile": {
                  "bootDiagnostics": {
                    "enabled": true
                  }
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-network-interface', parameters('VM_SERVER_name')))]"
              ]
            }
          ]
        }
      }
    }
  ]
}
